--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>💊 İlaç Hatırlatma Güzelim</title>
-<link rel="manifest" href="manifest.json" />
-<style>
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #ffc1cc, #ffe6f0);
-    color: #5a2a3e;
-    text-align: center;
-    padding: 20px;
-  }
-  h1 {
-    margin-bottom: 8px;
-  }
-  input[type="time"] {
-    padding: 10px;
-    margin: 10px 5px;
-    border-radius: 8px;
-    border: 2px solid #f29ca6;
-  }
-  button {
-    padding: 10px 20px;
-    background-color: #f76c91;
-    border: none;
-    border-radius: 8px;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    margin-top: 12px;
-  }
-  button:hover {
-    background-color: #e14f78;
-  }
-  #message {
-    margin-top: 20px;
-    font-size: 1.4rem;
-    color: #ff2d55;
-    font-weight: 700;
-    user-select:none;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>💊 İlaç Hatırlatma Güzelim</title>
+  <link rel="manifest" href="manifest.json" />
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #ffc1cc, #ffe6f0);
+      color: #5a2a3e;
+      text-align: center;
+      padding: 20px;
+    }
+    h1 {
+      margin-bottom: 8px;
+    }
+    input[type="time"] {
+      padding: 10px;
+      margin: 10px 5px;
+      border-radius: 8px;
+      border: 2px solid #f29ca6;
+    }
+    button {
+      padding: 10px 20px;
+      background-color: #f76c91;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 12px;
+    }
+    button:hover {
+      background-color: #e14f78;
+    }
+    #message {
+      margin-top: 20px;
+      font-size: 1.4rem;
+      color: #ff2d55;
+      font-weight: 700;
+      user-select:none;
+    }
+  </style>
 </head>
 <body>
   <h1>💊 İlaç Hatırlatma Güzelim</h1>
@@ -58,11 +58,12 @@
   
   <div id="message"></div>
   
+  <!-- Firebase SDK'ları -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-  <script src="app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-messaging-compat.js"></script>
   
+  <!-- Projenin JS kodu -->
+  <script src="app.js"></script>
 </body>
 </html>
-
